src/test/deca/context/valid/assign-subtype.deca
// Description:
//    Assign un subtype
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

class A{

}

class B extends A{

}

{
    A a;
    a = new B;
}