src/test/deca/context/invalid/assign-not-subtype.deca
// Description:
//    Assign not a subtype
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

class A{

}

class B{

}

{
    A a;
    a = new B;
}